added references for CRPS for ensembles

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -230,3 +230,31 @@
   publisher={CSIRO Publishing},
   doi={10.1071/es21010}
 }
+ @article{Ferro_2013, 
+	title={Fair scores for ensemble forecasts: Fair Scores for Ensemble Forecasts}, 
+	volume={140}, 
+	ISSN={0035-9009}, 
+	url={http://dx.doi.org/10.1002/qj.2270}, 
+	DOI={10.1002/qj.2270}, 
+	number={683}, 
+	journal={Quarterly Journal of the Royal Meteorological Society}, 
+	publisher={Wiley}, 
+	author={Ferro, C. A. T.}, 
+	year={2013}, 
+	month=dec, 
+	pages={1917–1923}
+  }
+ @article{Gneiting_2007, 
+	title={Strictly Proper Scoring Rules, Prediction, and Estimation}, 
+	volume={102}, ISSN={1537-274X}, 
+	url={http://dx.doi.org/10.1198/016214506000001437}, 
+	DOI={10.1198/016214506000001437}, 
+	number={477}, 
+	journal={Journal of the American Statistical Association}, 
+	publisher={Informa UK Limited}, 
+	author={Gneiting, Tilmann and Raftery, Adrian E}, 
+	year={2007}, 
+	month=mar, 
+	pages={359–378}
+ }
+
