--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -121,15 +121,6 @@
 	year         = {2021},
 	doi          = {10.1175/bams-d-19-0093.1}
 }
-@Article{loveday2024jive,
-	title={The Jive Verification System and its Transformative Impact on Weather Forecasting Operations}, 
-	author={Nicholas Loveday and Deryn Griffiths and Tennessee Leeuwenburg and Robert Taggart and Thomas C. Pagano and George Cheng and Kevin Plastow and Elizabeth Ebert and Cassandra Templeton and Maree Carroll and Mohammadreza Khanarmuei and Isha Nagpal},
-	year={2024},
-	eprint={2404.18429},
-	archivePrefix={arXiv},
-	primaryClass={physics.ao-ph},
-	doi={10.48550/arXiv.2404.18429}
-}
 @book{Griffiths:2017,
 	title	     = {Advice for automation of forecasts: a framework},
 	author		 = {Griffiths, Deryn and Jack, Harry and Foley, Michael and Ioannou, Ioanna and Liu, Maoyuan},
@@ -230,7 +221,15 @@
   publisher={CSIRO Publishing},
   doi={10.1071/es21010}
 }
- @article{Ferro_2013, 
+@misc{loveday2024jive,
+      title={The Jive Verification System and its Transformative Impact on Weather Forecasting Operations}, 
+      author={Nicholas Loveday and Deryn Griffiths and Tennessee Leeuwenburg and Robert Taggart and Thomas C. Pagano and George Cheng and Kevin Plastow and Elizabeth Ebert and Cassandra Templeton and Maree Carroll and Mohammadreza Khanarmuei and Isha Nagpal},
+      year={2024},
+      eprint={2404.18429},
+      archivePrefix={arXiv},
+      primaryClass={physics.ao-ph}
+}
+@article{Ferro_2013, 
 	title={Fair scores for ensemble forecasts: Fair Scores for Ensemble Forecasts}, 
 	volume={140}, 
 	ISSN={0035-9009}, 
@@ -243,8 +242,8 @@
 	year={2013}, 
 	month=dec, 
 	pages={1917–1923}
-  }
- @article{Gneiting_2007, 
+}
+@article{Gneiting_2007, 
 	title={Strictly Proper Scoring Rules, Prediction, and Estimation}, 
 	volume={102}, ISSN={1537-274X}, 
 	url={http://dx.doi.org/10.1198/016214506000001437}, 
@@ -256,5 +255,5 @@
 	year={2007}, 
 	month=mar, 
 	pages={359–378}
- }
+}
 
