--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -29,12 +29,11 @@
     "3. Calculate the desired metrics from the contingency tables produced in step two. `scores` contains the following binary congtingency scores:\n",
     "   - accuracy\n",
     "   - frequency bias (bias score)\n",
-    "   - hit rate (probability of detection, sensitivity)\n",
+    "   - hit rate (true positive rate, probability of detection, sensitivity)\n",
     "   - false alarm rate (probability of false detection)\n",
     "   - success ratio\n",
     "   - threat score (critical success index)\n",
     "   - pierce skill score\n",
-    "   - sensitivity\n",
     "   - specificity\n",
     "\n",
     "\n",
