Rename typo from pierce to peirce

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -33,7 +33,7 @@
     "   - false alarm rate (probability of false detection)\n",
     "   - success ratio\n",
     "   - threat score (critical success index)\n",
-    "   - pierce skill score\n",
+    "   - peirce skill score\n",
     "   - specificity\n",
     "\n",
     "\n",
