The bias tutorial had become unlinked in the Explanation notebook after a name change Added the Pandas API to the Explanation notebook Update minor typos in notebook titles

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -38,12 +38,12 @@
    "source": [
     "\n",
     "## Continuous\n",
-    "- [Flip Flop](./Flip_Flop_Index.ipynb)\n",
+    "- [Flip-Flop Index](./Flip_Flop_Index.ipynb)\n",
     "- [MAE](./Mean_Absolute_Error.ipynb) / [RMSE](./Root_Mean_Squared_Error.ipynb) / [MSE](./Mean_Squared_Error.ipynb)\n",
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
     "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
-    "- [Bias](./Bias.ipynb)"
+    "- [Additive Bias and Multiplicative Bias](./Additive_and_multiplicative_bias.ipynb)"
    ]
   },
   {
@@ -113,8 +113,17 @@
     "\n",
     "## Other\n",
     "- [Weighting Results](./Weighting_Results.ipynb)\n",
-    "- [Angular data](.Angular_data.ipynb)"
+    "- [Angular data](./Angular_data.ipynb)\n",
+    "- [Introduction to Pandas API](./Pandas_API.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d050794-1d61-4274-bfd8-99b2fd24cc0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -133,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
