--- a/tutorials/Flip_Flop_Index.ipynb
+++ b/tutorials/Flip_Flop_Index.ipynb
@@ -5,7 +5,7 @@
    "id": "57b22edd-ff30-4e05-8b54-9cd6ba52755c",
    "metadata": {},
    "source": [
-    "# Flip Flop Index"
+    "# Flip-Flop Index"
    ]
   },
   {
@@ -3384,7 +3384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.2"
   },
   "toc": {
    "base_numbering": 1,
