--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -20,20 +20,24 @@
    "source": [
     "## Overview of Binary Contingency Scores\n",
     "\n",
-    "Many people will be familiar with the following terms: hits (true positives), misses (false negatives) and true positive rate. These terms and many more all apply to a binary contingency table. Producing these categorical statistics is inherently a three-step process.\n",
+    "Examples of contingency scores include: hit rate (true positive rate), false alarm rate and accuracy.\n",
+    "\n",
+    "These scores are calculated based on a binary contingency table, which comprises true positives (hits), true negatives (correct negatives), false positives (false alarms) and false negatives (misses).\n",
+    "\n",
+    "Producing these categorical statistics is inherently a three-step process.\n",
     "\n",
     "1. For data that is either continuous or categorical, first convert it to binary data using an \"event definition\". For data that is already binary, go straight to step two.\n",
     "2. Produce a contingency manager object, which:\n",
     "   - stores the true positives, true negativates, false positives and false negatives, and\n",
     "   - allows the data to be aggragated and transformed (for example, reducing the latitude and longitude dimensions while preserving the height dimension in order to assess the accuracy at different vertical levels).\n",
     "3. Calculate the desired metrics from the contingency tables produced in step two. `scores` contains the following binary congtingency scores:\n",
-    "   - accuracy\n",
+    "   - accuracy (fraction correct)\n",
     "   - frequency bias (bias score)\n",
     "   - hit rate (true positive rate, probability of detection, sensitivity)\n",
-    "   - false alarm rate (probability of false detection)\n",
+    "   - false alarm rate (probability of false detection) - not to be confused with false alarm ratio\n",
     "   - success ratio\n",
     "   - threat score (critical success index)\n",
-    "   - peirce skill score\n",
+    "   - the Peirce skill score (true skill statistic, Hannssen and Kuipers discriminant)\n",
     "   - specificity\n",
     "\n",
     "\n",
