Draft: Midpoint review request - 138 binary contingency table class poc (#191)
* Initial implementation of the binary contingency table module
* Add a test for the compute() function in dask
* Update Explanation with renamed Binary Contingency notebook
* Added a test demonstrating dimension broadcasting
* Test cases adjust to always use the 'gt' operator
* Base class updated to use 'greater than or equal to' by default

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -57,7 +57,8 @@
    "source": [
     "\n",
     "## Categorical\n",
-    "- [FIRM](./FIRM.ipynb)\n"
+    "- [FIRM](./FIRM.ipynb)\n",
+    "- [Binary Contingency Scores](./Binary_Contingency_Scores.ipynb)\n"
    ]
   },
   {
