Quantile Loss Tutorial update spelling and links

--- a/tutorials/Quantile_Loss.ipynb
+++ b/tutorials/Quantile_Loss.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Quantile Loss (Score)\n",
     "\n",
-    "[Geinting, T. (2011). Making and evaluating point forecasts, Journal of the American Statistical Association, 106(494), 746-762.](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138)\n",
+    "[Gneiting, T. (2011). Making and evaluating point forecasts, Journal of the American Statistical Association, 106(494), 746-762.](https://doi.org/10.1198/jasa.2011.r10138)\n",
     "\n",
     "Quantile loss (score) is a consistent scoring function for an $\\alpha$-quantile forecast, where $\\alpha \\in (0, 1)$. Quantile loss function is also used in Machine Learning, in quantile regression, which focuses on estimating different quantiles of the conditional distributution of the response variable. Please note that quantiles are often referred to as value-at-risk in finance.\n",
     "\n",
@@ -19,7 +19,7 @@
     "\n",
     "where $S$ is the scoring function (here quantile loss), $x$ and $y$ are forecast and observation, respectively.\n",
     "\n",
-    "For more information about quantile loss function, please read [Geinting, T. (2011)](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138).\n",
+    "For more information about quantile loss function, please read [Gneiting, T. (2011)](https://doi.org/10.1198/jasa.2011.r10138).\n",
     "\n",
     "\n",
     "Now let's look at an example where we demonstrate how to use quantile score:"
