Added redirect alias functions for true skill statistic and Hanssen and Kuipers discriminant

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -38,7 +38,7 @@
     "   - false alarm rate (probability of false detection) - not to be confused with false alarm ratio\n",
     "   - success ratio\n",
     "   - threat score (critical success index)\n",
-    "   - the Peirce skill score (true skill statistic, Hannssen and Kuipers discriminant)\n",
+    "   - the Peirce skill score (true skill statistic, Hanssen and Kuipers discriminant)\n",
     "   - specificity\n",
     "\n",
     "\n",
