Changed "contingency scores" to "binary categorical scores" throughout. Moved reference to more complex event operators for thunderstorms to the explanation of "event operator".

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -19,9 +19,9 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Overview of Binary Contingency Scores\n",
+    "## Scores for Binary Categorical Forecasts\n",
     "\n",
-    "Examples of contingency scores include: hit rate (true positive rate), false alarm rate and accuracy.\n",
+    "Examples of binary categorical scores include: hit rate (true positive rate), false alarm rate and accuracy.\n",
     "\n",
     "These scores are calculated based on a binary contingency table, which comprises true positives (hits), true negatives (correct negatives), false positives (false alarms) and false negatives (misses).\n",
     "\n",
@@ -29,9 +29,9 @@
     "\n",
     "1. For data that is either continuous or categorical, first convert it to binary data using an \"event definition\". For data that is already binary, go straight to step two.\n",
     "2. Produce a contingency manager object, which:\n",
-    "   - stores the true positives, true negativates, false positives and false negatives, and\n",
-    "   - allows the data to be aggragated and transformed (for example, reducing the latitude and longitude dimensions while preserving the height dimension in order to assess the accuracy at different vertical levels).\n",
-    "3. Calculate the desired metrics from the contingency tables produced in step two. `scores` contains the following binary congtingency scores:\n",
+    "   - stores the true positives, true negatives, false positives and false negatives, and\n",
+    "   - allows the data to be aggregated and transformed (for example, reducing the latitude and longitude dimensions while preserving the height dimension in order to assess the accuracy at different vertical levels).\n",
+    "3. Calculate the desired metrics from the contingency tables produced in step two. `scores` contains the following binary categorical scores:\n",
     "   - accuracy (fraction correct)\n",
     "   - frequency bias (bias score)\n",
     "   - hit rate (true positive rate, probability of detection, sensitivity, recall)\n",
@@ -40,7 +40,7 @@
     "   - success ratio (precision)\n",
     "   - threat score (critical success index)\n",
     "   - the Peirce skill score (true skill statistic, Hanssen and Kuipers discriminant)\n",
-    "   - specificity\n",
+    "   - specificity (true negative rate)\n",
     "   - f1 score\n",
     "   - equitable threat score (Gilbert's skill score)\n",
     "   - Heidke skill score (Cohen's kappa)\n",
@@ -48,7 +48,7 @@
     "   - odds ratio skill score (Yule's q)\n",
     "\n",
     "\n",
-    "`scores` provides support for all three steps, plus convenient functions for working efficiently. Most of the `scores` APIs are functional in nature, however introducing some classes (see below) will make contingency metrics much easier to calculate and work with. This notebook starts with simple examples and builds up to more complex ones."
+    "`scores` provides support for all three steps, plus convenient functions for working efficiently. Most of the `scores` APIs are functional in nature, however introducing some classes (see below) makes binary categorical metrics much easier to calculate and work with. This notebook starts with simple examples and builds up to more complex ones."
    ]
   },
   {
@@ -71,7 +71,7 @@
     "- convert the non-binary data into binary data outside of `scores`, then input the binary data into `scores` (in which case, go to step two), OR  \n",
     "- use `scores` to efficiently convert the non-binary data into binary data, using the `scores` \"event operator\" class. \n",
     "\n",
-    "`scores` provides a general class called an \"EventOperator\". `scores` provides in-built event operator types (e.g. greater-than, less-than or many others). Alternatively, users can define their own event operator implementation for use within `scores`.\n",
+    "`scores` provides a general class called an \"EventOperator\". `scores` provides in-built event operator types (e.g. greater-than, less-than and many others). Alternatively, users can define their own event operator implementation for use within `scores` (for example, for more complex event definitions involving multiple variables).\n",
     "    \n",
     "The rest of this section focuses on using `scores` to convert continuous data into binary data using the \"event operator\" class.\n",
     "\n",
@@ -86,7 +86,7 @@
     "\n",
     "Here is an example of using `scores` to convert non-binary data into binary data using the \"event operator\" class.\n",
     "\n",
-    "Consider the following two tables of forecast and observed values for precipitation."
+    "Consider the following two idealized tables of forecast and observed values (in mm per hour) for precipitation."
    ]
   },
   {
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Within 0.1 or 0.2 of the forecast in all cases except one\n",
+    "# Idealized observations are within 0.1 or 0.2 of the forecast in all cases except one\n",
     "# Can be used to find some exact matches, and some close matches\n",
     "simple_obs = xr.DataArray(\n",
     "    [\n",
@@ -145,7 +145,7 @@
    "source": [
     "For the purposes of this example, let's say an event occurs if the precipitation value is greater than 1.3. We therefore define a threshold based event operator with a threshold of 1.3.\n",
     "\n",
-    "Applying this operator, means `scores` converts the non-binary data into binary data. It does this by creating binary event data - precipitation data with a value less than or equal to 1.3 is \"false\" and precipitation data with a value greater than 1.3 is \"true\".\n",
+    "Applying this operator means `scores` converts the non-binary data into binary data. It does this by creating binary event data - precipitation data with a value less than or equal to 1.3 is \"false\" and precipitation data with a value greater than 1.3 is \"true\".\n",
     "\n",
     "The following code creates a \"greater than\" operator  -  using `scores` built-in ThresholdEventOperator  -  which creates events with a threshold of \"> 1.3\". It can be repeatedly called with different event thresholds, for reasons that will be explained later.\n"
    ]
@@ -3109,7 +3109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
