--- a/tutorials/CRPS_for_CDFs.ipynb
+++ b/tutorials/CRPS_for_CDFs.ipynb
@@ -16,9 +16,7 @@
    "id": "54e7f1a6",
    "metadata": {},
    "source": [
-    "Uncertainty is inherent in forecasting. Full forecast information, whether objective or subjective, will describe a range of possibilities. \n",
-    "\n",
-    "Scalar forecasts, with a forecast expressed as the probability of not exceeding various thresholds, with sufficient thresholds to treat it as a continuous forecast distribution, can be compared to observations via the `crps_cdf` function.\n",
+    "Forecasts expressed as the probability of not exceeding various thresholds (i.e. expressed as a cumulative density function) can be compared to observations via the `crps_cdf` function. This works best when there are sufficient thresholds to treat it as a continuous probability distribution.\n",
     "\n",
     "An ensemble of scalar forecasts, designed to represent the range of possibilities, can be compared to observations via the `crps_for_ensemble` function. There is another tutorial specific to this.  \n",
     "\n",
@@ -301,7 +299,7 @@
    "id": "1defa525",
    "metadata": {},
    "source": [
-    "### Using the `threshold_weight` functionality.\n",
+    "### Using the `threshold_weight` functionality\n",
     "\n",
     "Imagine you are interested in how severe a frost will be. Once the screen temperature is 4C or lower a ground frost is plausible. So, you do not care if the forecast and observations are both above 4C, but want to assess the forecast when it or the observation is less than 4C.  In this case, make a weighting function of 1 for forecast thresholds below 4, and 0 above 4 as below.\n",
     "\n",
@@ -401,12 +399,6 @@
    "source": [
     "Note that there are several tools in `scores` to help with pre-processing CDF data available in `scores.processing.cdf`."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d007ff04",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
