Minor corrections to text

--- a/tutorials/CRPS_for_Ensembles.ipynb
+++ b/tutorials/CRPS_for_Ensembles.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment the following line and run to read the documentation regarding the crps_cdf funtion in scores.\n",
+    "# Uncomment the following line and run to read the documentation regarding the crps_for_ensemble function in scores.\n",
     "# crps_for_ensemble?"
    ]
   },
