Reordering metrics to put common ones first

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -38,12 +38,14 @@
    "source": [
     "\n",
     "## Continuous\n",
-    "- [Flip-Flop Index](./Flip_Flop_Index.ipynb)\n",
-    "- [MAE](./Mean_Absolute_Error.ipynb) / [RMSE](./Root_Mean_Squared_Error.ipynb) / [MSE](./Mean_Squared_Error.ipynb)\n",
-    "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
+    "- [Additive Bias and Multiplicative Bias](./Additive_and_multiplicative_bias.ipynb)\n",
+    "- [MAE](./Mean_Absolute_Error.ipynb)\n",
+    "- [RMSE](./Root_Mean_Squared_Error.ipynb)\n",
+    "- [MSE](./Mean_Squared_Error.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
     "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
-    "- [Additive Bias and Multiplicative Bias](./Additive_and_multiplicative_bias.ipynb)"
+    "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
+    "- [Flip-Flop Index](./Flip_Flop_Index.ipynb)"
    ]
   },
   {
@@ -57,8 +59,8 @@
    "source": [
     "\n",
     "## Categorical\n",
-    "- [FIRM](./FIRM.ipynb)\n",
-    "- [Binary Categorical Scores](./Binary_Contingency_Scores.ipynb)\n"
+    "- [Binary Categorical Scores](./Binary_Contingency_Scores.ipynb)\n",
+    "- [FIRM](./FIRM.ipynb)\n"
    ]
   },
   {
@@ -74,9 +76,9 @@
     "## Probability\n",
     "\n",
     "- [Brier Score](./Brier_Score.ipynb)\n",
-    "- [CRPS Part 1, for forecasts expressed as CDFs](./CRPS_for_CDFs.ipynb)\n",
-    "- [CRPS Part 2, for ensemble forecasts](./CRPS_for_Ensembles.ipynb)\n",
-    "- [Reciever Operating Characteristic](./ROC.ipynb)\n"
+    "- [CRPS for forecasts expressed as CDFs](./CRPS_for_CDFs.ipynb)\n",
+    "- [CRPS for ensemble forecasts](./CRPS_for_Ensembles.ipynb)\n",
+    "- [Receiver Operating Characteristic (ROC)](./ROC.ipynb)\n"
    ]
   },
   {
@@ -89,7 +91,7 @@
    },
    "source": [
     "\n",
-    "## Stats\n",
+    "## Statistical Tests\n",
     "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)\n"
    ]
   },
@@ -119,7 +121,7 @@
     "\n",
     "## Other\n",
     "- [Weighting Results](./Weighting_Results.ipynb)\n",
-    "- [Angular data](./Angular_data.ipynb)\n",
+    "- [Angular Data](./Angular_data.ipynb)\n",
     "- [Introduction to Pandas API](./Pandas_API.ipynb)"
    ]
   },
