updated tutorial notebook to include scores

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -34,12 +34,18 @@
     "3. Calculate the desired metrics from the contingency tables produced in step two. `scores` contains the following binary congtingency scores:\n",
     "   - accuracy (fraction correct)\n",
     "   - frequency bias (bias score)\n",
-    "   - hit rate (true positive rate, probability of detection, sensitivity)\n",
+    "   - hit rate (true positive rate, probability of detection, sensitivity, recall)\n",
+    "   - false alarm ratio\n",
     "   - false alarm rate (probability of false detection) - not to be confused with false alarm ratio\n",
-    "   - success ratio\n",
+    "   - success ratio (precision)\n",
     "   - threat score (critical success index)\n",
     "   - the Peirce skill score (true skill statistic, Hanssen and Kuipers discriminant)\n",
     "   - specificity\n",
+    "   - f1 score\n",
+    "   - equitable threat score (Gilbert's skill score)\n",
+    "   - Heidke skill score (Cohen's kappa)\n",
+    "   - odds ratio\n",
+    "   - odds ratio skill score (Yule's q)\n",
     "\n",
     "\n",
     "`scores` provides support for all three steps, plus convenient functions for working efficiently. Most of the `scores` APIs are functional in nature, however introducing some classes (see below) will make contingency metrics much easier to calculate and work with. This notebook starts with simple examples and builds up to more complex ones."
@@ -3103,7 +3109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
