Moved first text block to top of tutorial, minor tweaks

--- a/tutorials/Mean_Absolute_Error.ipynb
+++ b/tutorials/Mean_Absolute_Error.ipynb
@@ -9,6 +9,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "caae573b-ebc0-4356-a647-47c0f2d6603d",
+   "metadata": {},
+   "source": [
+    "MAE is a fair measure of error when you are forecasting the median value. The units of MAE match the units of the forecast and observation. It is not sensitive to outliers, such as occasionally faulty forecasts or observations.\n",
+    "\n",
+    "Minimising the MAE can be used as a training or objective function for machine learning to obtain a forecast that is the median of a full probabilistic forecast.\n",
+    "\n",
+    "This tutorial also includes some useful information on \n",
+    "- matching the forecast lead time to the validity time of the observations\n",
+    "- reducing spatial dimensionality to view how accuracy depends on latitude or longitude."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cf78b685-ec20-4935-848f-333fc7fc6735",
@@ -30,16 +44,6 @@
    "source": [
     "# Uncomment the line below to view detailed help information on the arguments to the MAE function\n",
     "# help(mae)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "caae573b-ebc0-4356-a647-47c0f2d6603d",
-   "metadata": {},
-   "source": [
-    "MAE is a fair measure of error if you are forecasting the median value. The units of MAE match the units of the forecast and observation. It is not sensitive to outliers, such as occasionally faulty forecasts or observations.\n",
-    "\n",
-    "Minimising the MAE can be used as a training or objective function for machine learning to obtain a forecast that is the median of a full probabilistic forecast."
    ]
   },
   {
@@ -76,7 +80,7 @@
    "metadata": {},
    "source": [
     "## Spatial Structure of Change\n",
-    "Exploring the example forecast you will see it provides 240 predictions, being every hour for 10 days. We will start by doing something a little surprising - which is using mae to compute the mean absolute difference of the forecasts (at all lead times) compared to the first predicted hour. While this says nothing about forecast accuracy, it does allow us to visualise which parts of the globe change more than others through the period.\n",
+    "Exploring the example forecast you will see it provides 240 predictions, being every hour for 10 days. We will start by doing something a little surprising - which is using mae to compute the mean absolute *difference* of the forecasts (at all lead times) compared to the first predicted hour. While this says nothing about forecast accuracy, it does allow us to visualise which parts of the globe change more than others through the period.\n",
     "\n",
     "This answers the question \"over the next ten days, which parts of the earth are likely to experience the greatest changes in temperature on average\".\n",
     "\n",
@@ -137,7 +141,7 @@
    "id": "e4f7d378-c65d-444c-ad96-61d03cb987b7",
    "metadata": {},
    "source": [
-    "## Matching the Forecast Lead Time and to Observations\n",
+    "## Matching the Forecast Lead Time to Observations\n",
     "\n",
     "To check whether a forecast is accurate, we need to match it to the observations (here taken as an analysis grid - an explanation of which is out of scope for this tutorial) to see how things turned out. We want to compare the analysis to the forecast valid at the time of the analysis. To do this, we need to introduce a few concepts about how a forecast model works. \n",
     "\n",
@@ -825,26 +829,10 @@
     "\n",
     "Explore the `weights` option within mae. The tutorial Weighting_Results might assist with this.\n",
     "\n",
-    "Explore the `angular` option within mae, relevant if forecasting direction in degrees.\n",
+    "Explore the `angular` option within mae, relevant if forecasting direction in degrees (e.g. wind).\n",
     "\n",
-    "Explore the Mean_Squared_Error and Root_Mean_Squared_Error tutorials which compare mse and rmse to mae."
+    "Explore the Mean_Squared_Error and Root_Mean_Squared_Error tutorials which compare MSE and RMSE to MAE."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6f4aa40-ad00-4355-b49c-df5a1957068b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c0877aa-78ce-44ee-8b29-669780ff03d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
