--- a/tutorials/Mean_Squared_Error.ipynb
+++ b/tutorials/Mean_Squared_Error.ipynb
@@ -10,6 +10,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d25b9cda-f628-42f8-acce-1523d6df345c",
+   "metadata": {},
+   "source": [
+    "MSE is sensitive to large errors.\n",
+    "\n",
+    "MSE is a fair measure of error when you are forecasting the mean value. Minimising the MSE can be used as a training or objective function for machine learning to obtain a forecast that is the mean of a full probabilistic forecast.\n",
+    "\n",
+    "Using the MSE instead of MAE, or forecasting mean instead of median, is appropriate if big errors are considered much worse than small ones. For example, you might not mind if the temperature is 1 degree different but really care if it's 30 degrees different and want to treat the 30 degree error as 900 times worse than the 1 degree error.\n",
+    "\n",
+    "The units of MSE do not match the units of the forecasts or observations. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cf78b685-ec20-4935-848f-333fc7fc6735",
@@ -31,21 +45,6 @@
    "source": [
     "# Uncomment the line below to view detailed help information on the arguments to the MSE function\n",
     "# help(mse)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d25b9cda-f628-42f8-acce-1523d6df345c",
-   "metadata": {},
-   "source": [
-    "## Use MSE to Focus on Large Anomalies; Don't Sweat the Small Stuff\n",
-    "MSE is sensitive to large errors.\n",
-    "\n",
-    "MSE is a fair measure of error if you are forecasting the mean value. Minimising the MSE can be used as a training or objective function for machine learning to obtain a forecast that is the mean of a full probabilistic forecast.\n",
-    "\n",
-    "Using the MSE instead of MAE, or forecasting mean instead of median, is appropriate if big errors are considered much worse than small ones. For example, you might not mind if the temperature is 1 degree different but really care if it's 30 degrees different and want to treat the 30 degree error as 900 times worse than the 1 degree error.\n",
-    "\n",
-    "The units of MSE do not match the units of the forecasts or observations. "
    ]
   },
   {
@@ -336,7 +335,7 @@
     "\n",
     "Explore the `angular` option within mse, relevant if forecasting direction in degrees.\n",
     "\n",
-    "Explore the Root_Mean_Squared_Error tutorial which compares rmse and mse to mae."
+    "Explore the Root_Mean_Squared_Error tutorial which compares RMSE and MSE to MAE."
    ]
   },
   {
