Removed reference to varying H in results as being difficult to interpret (better for readers to get that info in Elementary Scores explanation further down).

--- a/tutorials/Murphy_Diagrams.ipynb
+++ b/tutorials/Murphy_Diagrams.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate some synthetic observations between 0 and 40 repesenting temperature in Celcius\n",
+    "# Generate some synthetic observations between 0 and 40 repesenting temperature in Celsius\n",
     "N = 1000\n",
     "obs = xr.DataArray(data=40 * np.random.random(N), dims=[\"time\"], coords={\"time\": np.arange(0, N)})\n",
     "\n",
@@ -1149,7 +1149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, they are very similar. Next we will generate our murphy scores and plot them. To plot the Murphy Diagram for the mean, we choose \"expectile\" for the functional, and 0.5 for the $\\alpha$"
+    "As you can see, they are very similar. Next we will generate our Murphy scores and plot them. To plot the Murphy Diagram for the mean, we choose \"expectile\" for the functional, and 0.5 for the $\\alpha$ ($\\alpha$ is the risk parameter, i.e. the quantile or expectile level for the functional.)"
    ]
   },
   {
@@ -1203,11 +1203,10 @@
    "source": [
     "- The horizontal axis shows the decision threshold $\\theta$ (the temperature)\n",
     "- The vertical axis shows the mean elementary score, sometimes interpreted as economic regret. \n",
-    "- If you are only interested in whether it will be warmer or cooler than 20, compare the past performance of the two forecasts by reading the total at theta = 20.\n",
     "- Lower scores are better.\n",
     "- The area under the curve is proportional to the MSE. They have similar total area under the curves and similar MSEs.\n",
+    "- If you are only interested in whether it will be warmer or cooler than 20, compare the past performance of the two forecasts by reading the mean elementary scores at theta = 20.\n",
     "- Forecast 1 (blue line) is clearly better for higher decision thresholds above 40 degrees, while Forecast 2 (orange line) is general better for users who care about decision thresholds between 5 and 35 degrees.\n",
-    "- One can imagine how constructing a scoring function by varying $H$ could lead to one forecast system being better than another.\n",
     "\n",
     "## Things to try next\n",
     "- Try setting \"decomposition\" to True.\n",
@@ -1223,15 +1222,13 @@
    "source": [
     "## An introduction to elementary scores\n",
     "\n",
-    "[Ehm, W., Gneiting, T., Jordan, A. and Krüger, F., 2016. Of quantiles and expectiles: consistent scoring functions, Choquet representations and forecast rankings. Journal of the Royal Statistical Society Series B: Statistical Methodology, 78(3), pp.505-562.](https://academic.oup.com/jrsssb/article/78/3/505/7040984?login=false)\n",
-    "\n",
     "The MSE is a consistent scoring function for forecasting the mean (also called the expected value or 0.5 expectile) of a predicitive distribution. But did you know that there is a whole family of proper scoring rules that are consistent for the mean?\n",
     "\n",
     "[Savage (1971)](http://www.jstor.org/stable/2284229) showed that any function is consistent for the mean if and only if\n",
     "$$S(x, y) = \\phi(y) - \\phi(x) -\\phi'(x)(y-x)$$\n",
     "where $x$ is the forecast value and $y$ is the observation, where $\\phi$ is convex with subgradient $\\phi'$.\n",
     "\n",
-    "[Ehm et al. (2016)](https://academic.oup.com/jrsssb/article/78/3/505/7040984?login=false) showed that when a scoring function $S$ satisfies the above equation can be written as\n",
+    "[Ehm et al. (2016)](https://academic.oup.com/jrsssb/article/78/3/505/7040984?login=false) showed that when a scoring function $S$ satisfies the above equation it can be written as\n",
     "$$S(x, y) = \\int_{-\\infty}^{\\infty} S_{\\theta} (x, y) dH({\\theta})$$\n",
     "where $H$ is a non-negative measure, then\n",
     "\n",
@@ -1251,15 +1248,11 @@
     "- different expectiles\n",
     "- quantiles (e.g. median)\n",
     "- Huber quantiles\n",
-    "- probabilistic forecasts of binary outcomes."
+    "- probabilistic forecasts of binary outcomes.\n",
+    "\n",
+    "For more information:   \n",
+    "- Ehm, W., Gneiting, T., Jordan, A. and Krüger, F. (2016). Of quantiles and expectiles: consistent scoring functions, Choquet representations and forecast rankings. *Journal of the Royal Statistical Society Series B: Statistical Methodology*, 78, 505-562. [https://doi.org/10.1111/rssb.12154](https://academic.oup.com/jrsssb/article/78/3/505/7040984?login=false)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
