--- a/tutorials/Pearsons_Correlation.ipynb
+++ b/tutorials/Pearsons_Correlation.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create synthetic observations with two forecast systems. Forecast system 1 is identical to the observation day other than for a bias introduced. In contrast, forecast system 2 predicts random values around a mean value close to that of the observations"
+    "We create synthetic observations with two forecast systems. Forecast system 1 is identical to the observations but has a constant bias introduced. In contrast, forecast system 2 predicts random values around a mean value close to that of the observations."
    ]
   },
   {
@@ -91,9 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The MSE of forecast system 2 is better.\n",
+    "The MSE of forecast system 2 is better (lower).\n",
     "\n",
-    "Let's visualise the time series of forecast 1 and 2 against the observations."
+    "Let's visualise the time series of forecast 1 against the observations."
    ]
   },
   {
@@ -183,7 +183,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that there is a perfect linear relationship"
+    "We can see that there is a perfect linear relationship.\n",
+    "\n",
+    "Now let's plot the time series for forecast 2 together with the observations."
    ]
   },
   {
@@ -305,17 +307,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that forecast system 1 has a greater correlation with the observations than forecast system 2 does. It's worth noting that forecast sysetm 1 had a poorer MSE than forecast system 2. In this synthetic experiment, forecast system 1 could easily be bias corrected to outperform forecast system 2 when measured by MSE.\n",
+    "We can see that forecast system 1 has a greater correlation with the observations than forecast system 2 does. It's worth noting that forecast system 1 had a poorer MSE than forecast system 2. In this synthetic experiment, forecast system 1 could easily be bias corrected to outperform forecast system 2 when measured by MSE.\n",
     "\n",
     "For further information on the Pearson's correlation coefficient see [https://en.wikipedia.org/wiki/Pearson_correlation_coefficient](https://en.wikipedia.org/wiki/Pearson_correlation_coefficient)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
