--- a/tutorials/Additive_and_multiplicative_bias.ipynb
+++ b/tutorials/Additive_and_multiplicative_bias.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bias measures how well the mean forecast and mean observation correspond to each other. It can tell us whether there is an over or under-forecast tendency and inform how a forecast system could be easily recalibrated.\n",
+    "Bias measures how well the mean forecast and mean observation correspond to each other. It can tell us whether there is an over or under-forecast tendency and informs how a forecast system could be easily recalibrated.\n",
     "\n",
     "`Scores` has multiplicative bias and additive bias implementations for use on continuous forecasts.\n",
     "\n",
