Wording adjustment to magnitude documentation

--- a/tutorials/Additive_and_multiplicative_bias.ipynb
+++ b/tutorials/Additive_and_multiplicative_bias.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "`Scores` has multiplicative bias and additive bias implementations for use on continuous forecasts.\n",
     "\n",
-    "Additive bias is often called the \"mean error\". Since it does not tell us the average *magnitude* of the error, it is possible for there to be no bias even when there are large positive and negative errors.\n",
+    "Additive bias is often called the \"mean error\". Since it does not tell us the average *magnitude* (i.e. average of the absolute value of the error) of the error, it is possible for there to be little or no bias even when there are large positive and negative errors.\n",
     "\n",
     "Multiplicative bias is well suited for forecasts and observations that have 0 as an upper or lower bound (e.g., significant wave height, or wind magnitude). This could be useful for a forecaster who wants a simple method to bias correct a wind speed forecast.\n",
     "\n",
